[project]
name = "PagerMaid-Pyro"
version = "1.5.11"
description = "Advanced Multi-Featured Telegram UserBot by pyrogram."
authors = [
    {name = "xtaodada", email = "xtao@xtao.de"},
]
dependencies = [
    "pyrogram @ git+https://github.com/TeamPGM/pyrogram@1.5.11",
    "PyroTgCrypto>=1.2.7",
    "Pillow>=12.0.0",
    "pytz>=2026.1",
    "PyYAML>=6.0.2",
    "coloredlogs>=15.0.1",
    "psutil>=7.1.0",
    "httpx[socks]>=0.27.2",
    "apscheduler>=3.10.4",
    "sqlitedict>=2.1.0",
    "casbin>=1.36.3",
    "sentry-sdk>=2.54.0",
    "PyQRCode>=1.2.1",
    "PyPng",
    "fastapi>=0.135.1",
    "amis-python @ git+https://github.com/TeamPGM/amis-python",
    "uvicorn>=0.42.0",
    "starlette>=0.52.0",
    "pyjwt>=2.12.0",
]
requires-python = ">=3.10.0"
readme = "README.md"
license = {text = "AGPL 3.0+"}

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.pdm]
distribution = false
